# sewup-token-example

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
web3/: package-lock.json  send-tx.js  token.js  utils.js
