
[package]
name = "sewup-token-example"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See the following examples
# https://github.com/second-state/SewUp/tree/main/examples/hello-contract
# https://github.com/second-state/SewUp/tree/main/examples/default-contract

[dependencies]
sewup = { version = "0.1.6", features = [ "token" ] }
sewup-derive = "0.1.6"
anyhow = "*"

[dev-dependencies]
hex-literal = "0.3.1"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.sewup-token-example]
incremental = false
opt-level = "z"

[features]
constructor = []
constructor-test = []
